Update Group 9 Assignment 4 AML.ipynb

--- a/Assignment 4/Group 9 Assignment 4 AML.ipynb
+++ b/Assignment 4/Group 9 Assignment 4 AML.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "Group 9\n",
         "\n",
-        "By: Arvind Chaurasia and Harika Beesetti\n",
+        "By: Arvind Chaurasia\n",
         "\n",
         "Consider the IMDB example from Chapter 6. Re-run the example modifying the following:\n",
         "1. Cutoff reviews after 150 words.\n",
