Update Group 9 Assignment 3 At 1 (2).ipynb

--- a/Assignment 3/Group 9 Assignment 3 At 1 (2).ipynb
+++ b/Assignment 3/Group 9 Assignment 3 At 1 (2).ipynb
@@ -7,7 +7,7 @@
    "source": [
     "**Assignment 3: Time-Series Data**\n",
     "\n",
-    "By: Harika Beesetti and Arvind Chaurasia \n",
+    "By: Arvind Chaurasia \n",
     "\n",
     "Use any or all of the methods we discussed in class to improve weather time-series forecasting problems discussed in class. These methods can include. \n",
     "\n",
