--- a/Assignment 2/Group_9_AML_Convolution_Assignment_Imp (1).ipynb
+++ b/Assignment 2/Group_9_AML_Convolution_Assignment_Imp (1).ipynb
@@ -21,7 +21,7 @@
       "source": [
         "**Assignment 2: Convolution**\n",
         "\n",
-        "By: Arvind Chaurasia and Harika Beesetti"
+        "By: Arvind Chaurasia"
       ],
       "metadata": {
         "id": "aM13CHTiwDcM"
